--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,14 +26,14 @@ jobs:
         with:
           node-version: "20"
           cache: 'yarn'
-          cache-dependency-path: .emergent/yarn.lock
+          cache-dependency-path: frontend/yarn.lock
 
       - name: Install dependencies
-        working-directory: ./.emergent/frontend
+        working-directory: ./frontend
         run: yarn install --frozen-lockfile
 
       - name: Build
-        working-directory: ./.emergent/frontend
+        working-directory: ./frontend
         run: yarn build
         env:
           REACT_APP_BACKEND_URL: ""
@@ -44,7 +44,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './.emergent/frontend/build'
+          path: './frontend/build'
 
   deploy:
     environment:
